--- a/public/admin.html
+++ b/public/admin.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin - Manage Waitlist</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Admin</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <div class="container">
-        <h2>Manage Waitlist</h2>
-        <button id="backButton">Back</button>
-        <div id="waitlistContainer"></div>
+    <h1>Admin Page</h1>
+    <div id="authDiv">
+        <p>Scan this QR code with your Google Authenticator app:</p>
+        <img id="qrcode" alt="QR Code">
+        <form id="authForm">
+            <input type="text" id="token" placeholder="Enter authentication code" required>
+            <button type="submit">Authenticate</button>
+        </form>
     </div>
-    <script src="admin.js"></script>
+    <div id="adminContent" style="display:none;">
+        <button id="backButton">Back to Home</button>
+        <h2>Waitlist</h2>
+        <ul id="waitlist"></ul>
+    </div>
+    <script src="/admin.js"></script>
 </body>
 </html>
