--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waitlist Tool</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Waitlist Tool</h1>
-        <form id="signupForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="phone">Phone:</label>
-            <input type="text" id="phone" name="phone" required>
-            <button type="submit">Sign Up</button>
-        </form>
-        <button id="adminButton">Admin</button>
-    </div>
-    <script src="script.js"></script>
+    <h1>Waitlist Tool</h1>
+    <form id="signupForm">
+        <input type="text" id="name" placeholder="Name" required>
+        <input type="email" id="email" placeholder="Email" required>
+        <button type="submit">Sign Up</button>
+    </form>
+    <button id="adminButton">Admin</button>
+    <script src="/script.js"></script>
 </body>
 </html>
