--- a/public/admin.html
+++ b/public/admin.html
@@ -3,24 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin</title>
-    <link rel="stylesheet" href="/styles.css">
+    <title>Admin Panel</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Admin Page</h1>
-    <div id="authDiv">
-        <p>Scan this QR code with your Google Authenticator app:</p>
-        <img id="qrcode" alt="QR Code">
-        <form id="authForm">
-            <input type="text" id="token" placeholder="Enter authentication code" required>
-            <button type="submit">Authenticate</button>
+    <div class="container">
+        <h1>Admin Panel</h1>
+        <form id="password-form">
+            <input type="password" id="password" placeholder="Enter password" required>
+            <button type="submit">Submit</button>
         </form>
+        <div id="user-list">
+            <!-- User list will be loaded here -->
+        </div>
+        <a href="index.html" class="back-button">Back</a>
     </div>
-    <div id="adminContent" style="display:none;">
-        <button id="backButton">Back to Home</button>
-        <h2>Waitlist</h2>
-        <ul id="waitlist"></ul>
-    </div>
-    <script src="/admin.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
