--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <h1>Waitlist Tool</h1>
-    <form id="signupForm">
-        <input type="text" id="name" placeholder="Name" required>
-        <input type="email" id="email" placeholder="Email" required>
-        <button type="submit">Sign Up</button>
-    </form>
-    <button id="adminButton">Admin</button>
+    <div class="container">
+        <h1>Pocket Investor Waitlist</h1>
+        <form id="signupForm">
+            <input type="text" id="name" placeholder="Name" required>
+            <input type="email" id="email" placeholder="Email" required>
+            <button type="submit">Sign Up</button>
+        </form>
+        <button id="adminButton">Admin</button>
+    </div>
     <script src="/script.js"></script>
 </body>
 </html>
